Fix development environment and change link colour
The ./develop_server script will regenerate pages when anything has
changed. Now, the browser will reload the page when the generated pages
have changed, too.

Additionally, the links are in a PCB-ish green. (Actual PCB green was
too dark.)

--- a/my-theme/static/stylesheet/variables.less
+++ b/my-theme/static/stylesheet/variables.less
@@ -10,6 +10,8 @@
 @dark-grey: #242121;
 @green: #57b56f;
 @light-green: #68d984;
+@pcb-green: #00a026;
+@pcb-green-light: #00bd32;
 
 
 // Font family
@@ -21,8 +23,8 @@
 @text-color: #000000;
 
 // Links
-@link-color: @green;
-@link-hover-color: @light-green;
+@link-color: @pcb-green;
+@link-hover-color: @pcb-green-light;
 
 // Sidebar (aside)
 @sidebar-bg: @grey;
